cluster/download/sabnzbd/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: download
  labels:
    app: sabnzbd
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes-excludes: incomplete
      labels:
        app: sabnzbd
    spec:
      automountServiceAccountToken: false
      containers:
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 60
            failureThreshold: 10
          resources:
            requests:
              cpu: 100m
              memory: 8G
            limits:
              cpu: "4"
              memory: 16G
          volumeMounts:
            - name: config
              mountPath: /config
            - name: download
              mountPath: /download
            - name: incomplete
              mountPath: /incomplete
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: download
          persistentVolumeClaim:
            claimName: sabnzbd-downloads
        - name: incomplete
          emptyDir:
            sizeLimit: 200Gi
